--- a/css/index.css
+++ b/css/index.css
@@ -142,8 +142,9 @@ body {
     height: 60vh;
     background: url('/home/ecleary/Documents/Lambda_School/buildweek1/front-end/img/pattern.jpg');
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
     padding: 0 20px;
     /* border: purple 10px solid; */
     border-top: black 10px solid;
@@ -179,7 +180,35 @@ input {
     background: white;
 }
 
-button {
+.login-container button {
     width: 95%;
     padding: 10px 0 ;
+}
+
+
+.text-container {
+    width: 50%;
+    height: 30vh;
+    /* border: black 5px solid; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.text-container .line {
+    width: 100%;
+    height: 10vh;
+    /* border: blue 5px solid; */
+}
+
+.text-container h2 {
+    font-size: 30px;
+    line-height: 70px;
+    text-align: center;
+}
+
+.text-container button {
+    width: 30%;
+    font-size: 20px;
 }
