--- a/css/index.css
+++ b/css/index.css
@@ -152,7 +152,7 @@ body {
 }
 
 .login-container {
-    width: 30%;
+    width: 25%;
     height: 50vh;
     display: flex;
     flex-direction: column;
@@ -212,3 +212,35 @@ input {
     width: 30%;
     font-size: 20px;
 }
+
+
+
+.contact-container {
+    width: 100%;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    border: black 5px solid;
+}
+
+.contact-container label {
+    width: 50%;
+    height: 5vh;
+    padding: 40px 0 0 0;
+    /* border: green 5px solid; */
+}
+
+.contact-container input {
+    width: 50%;
+    height: 5vh;
+    /* border: green 5px solid; */
+}
+
+.contact-container button {
+    width: 50%;
+    height: 5vh;
+    padding: 10px 100px;
+}
+
