dashboard styling and logout functionality

--- a/kickstarter/src/App.css
+++ b/kickstarter/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+.dashboard-header {
+  width: 95%;
+  margin-left: 2rem;
+}
+
+.logout-container {
+  margin-right: 5rem;
+  width: 5%;
+}
