--- a/css/index.css
+++ b/css/index.css
@@ -226,3 +226,65 @@ input {
     padding: 10px 100px;
 }
 
+
+
+/* Reviews page */
+
+.reviews-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    /* border: black 5px solid; */
+    height: 80vh;
+}
+
+.reviews-body h1 {
+    height: 10vh;
+    font-size: 20px;
+}
+
+.reviews-list {
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    /* align-items: space-evenly; */
+    align-content: space-evenly;
+    height: 60vh;
+    /* border: red 5px solid; */
+}
+
+.review {
+    width: 40%;
+    height: 25vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    border: black 2px solid;
+}
+
+.review-img {
+    width: 30%;
+}
+
+.review-txt {
+    width: 60%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    /* border: green 5px solid; */
+}
+
+.review-txt h2 {
+    font-size: 15px;
+    /* border: blue 5px solid; */
+}
+
+.review-txt p {
+    /* border: blue 5px solid; */
+    width: 80%;
+}
