--- a/css/index.css
+++ b/css/index.css
@@ -81,26 +81,23 @@ body {
     color: black;
 }
 
-#myHeader {
+#myHeader .header-nav{
     width: 100%;
     display: flex;
     flex-direction: row;
-    /* justify-content:flex-end; */
     justify-content:space-around;
     align-items: center;
     height: 10vh;
-    /* border: yellow 3px solid; */
 }
 
-#myFooter {
+#myHeader .header-img {
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content:space-around;
-    align-items: center;
-    height: 10vh;
-    /* border: yellow 3px solid; */
+    height: 20vh;
+    background: url('../img/pattern.jpg');
+    border-top: black 5px solid;
+    border-bottom: black 5px solid;
 }
+
 
 #myHeader div {
     width: 20%;
@@ -111,7 +108,7 @@ body {
     font-size: 20pt;
 }
 
-.links {
+#myHeader .links {
     width:30%;
     /* width:800px; */
     display:flex;
@@ -121,7 +118,7 @@ body {
     /* border: blue 3px solid; */
 }
 
-.links a {
+#myHeader .links a {
     letter-spacing: 3px;
     padding: 10px 0;
     blackground-color: black;
@@ -129,6 +126,17 @@ body {
     text-align:center;
     /* border: green 3px solid; */
     /* background-color: white; */
+}
+
+#myFooter {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-around;
+    align-items: center;
+    height: 10vh;
+    /* border: yellow 3px solid; */
+    border-top: black 5px solid;
 }
 
 a {
@@ -143,15 +151,11 @@ a {
 .within-index {
     width: 100%;
     height: 60vh;
-    background: url('/home/ecleary/Documents/Lambda_School/buildweek1/front-end/img/pattern.jpg');
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
     padding: 0 20px;
-    /* border: purple 10px solid; */
-    border-top: black 10px solid;
-    border-bottom: black 10px solid;
 }
 
 .join-container {
@@ -161,7 +165,6 @@ a {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    /* border: black 4px solid; */
     background: white;
     border: black 5px solid;
 }
