--- a/kickstarter-app/src/App.css
+++ b/kickstarter-app/src/App.css
@@ -1,3 +1,26 @@
+
+.marketing-link {
+  text-decoration: none;
+  color: black;
+  font-size: 2rem;
+  font-weight: bold;
+  margin-right: 50%;
+  padding: 0%;
+  margin-top: 1%;
+  margin-bottom: 1%;
+}
+
+
+.links {
+  text-decoration: none;
+  font-size: 1.5rem;
+  color: black;
+}
+
+.test {
+  text-decoration: none;
+}
+
 .App {
   text-align: center;
 }
