--- a/css/index.css
+++ b/css/index.css
@@ -144,23 +144,24 @@ a {
 }
 
 .index {
+    height: 140vh;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
 }
 
-.within-index {
-    width: 100%;
-    height: 60vh;
+.index-within {
+    width: 80%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
     align-items: center;
-    padding: 0 20px;
+    align-content: space-around;
 }
 
 .join-container {
-    width: 25%;
-    height: 50vh;
+    width: 35%;
+    height: 60vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -171,20 +172,15 @@ a {
 
 .join-container img {
     width: 95%;
-    height: 20vh;
+    height: 30vh;
     object-fit: cover;
 }
 
-label {
-    width: 100%;
-    padding: 20px 0 0 20px;
+.join-container h2 {
+    width: 80%;
+    text-align: center;
 }
 
-input {
-    width: 95%;
-    padding: 10px 0;
-    background: white;
-}
 
 .join-container a {
     width: 40%;
@@ -199,6 +195,7 @@ input {
     color: white;
     background: gray;
 }
+
 
 .contact-container {
     width: 100%;
