display username on dashboard

--- a/kickstarter/src/App.css
+++ b/kickstarter/src/App.css
@@ -55,3 +55,12 @@
   display: flex;
   justify-content: center;
 }
+
+.username-header {
+  display: flex;
+  justify-content: center;
+}
+
+.username-display {
+  padding-left: 5rem;
+}
