--- a/kickstarter/src/App.css
+++ b/kickstarter/src/App.css
@@ -64,3 +64,31 @@
 .username-display {
   padding-left: 5rem;
 }
+
+#loginBtn {
+  background-color: lightgray;
+  color: teal;
+}
+
+#registerBtn {
+  background-color: lightgray;
+  color: teal;
+}
+
+
+.marketing-link {
+  text-decoration: none;
+  color: black;
+  font-size: 2rem;
+  font-weight: bold;
+  margin-right: 50%;
+  padding: 0%;
+  margin-top: 1%;
+  margin-bottom: 1%;
+}
+
+.links {
+  text-decoration: none;
+  font-size: 1.5rem;
+  color: black;
+}
