--- a/css/index.css
+++ b/css/index.css
@@ -285,6 +285,7 @@ a {
 .review-txt p {
     /* border: blue 5px solid; */
     width: 80%;
+    text-align: center;
 }
 
 
@@ -684,7 +685,7 @@ a {
 
     .review {
 	width: 460px;
-	height: 60vh;
+	height: 50vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
@@ -699,7 +700,7 @@ a {
 
     .review-txt {
 	width: 60%;
-	height: 30vh;
+	height: 20vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
